--- a/docs/docs/integrations/vectorstores/astradb.ipynb
+++ b/docs/docs/integrations/vectorstores/astradb.ipynb
@@ -69,10 +69,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e1c5cd9e",
+   "metadata": {},
+   "source": [
+    "If you want to get best in-class automated tracing of your model calls you can also set your [LangSmith](https://docs.smith.langchain.com/) API key by uncommenting below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cb739c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# os.environ[\"LANGSMITH_API_KEY\"] = getpass.getpass(\"Enter your LangSmith API key: \")\n",
+    "# os.environ[\"LANGSMITH_TRACING\"] = \"true\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "22866f09-e10d-4f05-a24b-b9420129462e",
    "metadata": {},
    "source": [
-    "## Instantiation\n",
+    "## Initialization\n",
     "\n",
     "There are two ways to create an Astra DB vector store, which differ in how the embeddings are computed.\n",
     "\n",
@@ -84,9 +103,9 @@
     "\n",
     "Alternatively, you can use the [Vectorize](https://www.datastax.com/blog/simplifying-vector-embedding-generation-with-astra-vectorize) feature of Astra DB and simply specify the name of a supported embedding model when creating the store. The embedding computations are entirely handled within the database. (To proceed with this method, you must have enabled the desired embedding integration for your database, as described [in the docs](https://docs.datastax.com/en/astra-db-serverless/databases/embedding-generation.html).)\n",
     "\n",
-    "### Explicit Embedding Instantiation\n",
+    "### Explicit Embedding Initialization\n",
     "\n",
-    "Once you have selected an embedding function, we are ready to instantiate our vector store using the explicit embedding class.\n",
+    "Below, we instantiate our vector store using the explicit embedding class:\n",
     "\n",
     "```{=mdx}\n",
     "import EmbeddingTabs from \"@theme/EmbeddingTabs\";\n",
@@ -132,12 +151,12 @@
    "id": "84a1fe85-a42c-4f15-92e1-f79f1dd43ea2",
    "metadata": {},
    "source": [
-    "### Integrated Embedding Instantiation\n",
+    "### Integrated Embedding Initialization\n",
     "\n",
     "Here it is assumed that you have\n",
     "\n",
-    "- enabled the OpenAI integration in your Astra DB organization,\n",
-    "- added an API Key named `\"OPENAI_API_KEY\"` to the integration, and scoped it to the database you are using.\n",
+    "- Enabled the OpenAI integration in your Astra DB organization,\n",
+    "- Added an API Key named `\"OPENAI_API_KEY\"` to the integration, and scoped it to the database you are using.\n",
     "\n",
     "For more details on how to do this, please consult the [documentation](https://docs.datastax.com/en/astra-db-serverless/integrations/embedding-providers/openai.html)."
    ]
@@ -214,67 +233,58 @@
     "\n",
     "document_1 = Document(\n",
     "    page_content=\"I had chocalate chip pancakes and scrambled eggs for breakfast this morning.\",\n",
-    "    metadata={\"source\": \"tweet\"},\n",
-    "    id=1\n",
+    "    metadata={\"source\": \"tweet\"}\n",
     ")\n",
     "\n",
     "document_2 = Document(\n",
     "    page_content=\"The weather forecast for tomorrow is cloudy and overcast, with a high of 62 degrees.\",\n",
-    "    metadata={\"source\": \"news\"},\n",
-    "    id=2\n",
+    "    metadata={\"source\": \"news\"}\n",
     ")\n",
     "\n",
     "document_3 = Document(\n",
     "    page_content=\"Building an exciting new project with LangChain - come check it out!\",\n",
-    "    metadata={\"source\": \"tweet\"},\n",
-    "    id=3\n",
+    "    metadata={\"source\": \"tweet\"}\n",
     ")\n",
     "\n",
     "document_4 = Document(\n",
     "    page_content=\"Robbers broke into the city bank and stole $1 million in cash.\",\n",
-    "    metadata={\"source\": \"news\"},\n",
-    "    id=4\n",
+    "    metadata={\"source\": \"news\"}\n",
     ")\n",
     "\n",
     "document_5 = Document(\n",
     "    page_content=\"Wow! That was an amazing movie. I can't wait to see it again.\",\n",
-    "    metadata={\"source\": \"tweet\"},\n",
-    "    id=5\n",
+    "    metadata={\"source\": \"tweet\"}\n",
     ")\n",
     "\n",
     "document_6 = Document(\n",
     "    page_content=\"Is the new iPhone worth the price? Read this review to find out.\",\n",
-    "    metadata={\"source\": \"website\"},\n",
-    "    id=6\n",
+    "    metadata={\"source\": \"website\"}\n",
     ")\n",
     "\n",
     "document_7 = Document(\n",
     "    page_content=\"The top 10 soccer players in the world right now.\",\n",
-    "    metadata={\"source\": \"website\"},\n",
-    "    id=7\n",
+    "    metadata={\"source\": \"website\"}\n",
     ")\n",
     "\n",
     "document_8 = Document(\n",
     "    page_content=\"LangGraph is the best framework for building stateful, agentic applications!\",\n",
-    "    metadata={\"source\": \"tweet\"},\n",
-    "    id=8\n",
+    "    metadata={\"source\": \"tweet\"}\n",
     ")\n",
     "\n",
     "document_9 = Document(\n",
     "    page_content=\"The stock market is down 500 points today due to fears of a recession.\",\n",
-    "    metadata={\"source\": \"news\"},\n",
-    "    id=9\n",
+    "    metadata={\"source\": \"news\"}\n",
     ")\n",
     "\n",
     "document_10 = Document(\n",
     "    page_content=\"I have a bad feeling I am going to get deleted :(\",\n",
-    "    metadata={\"source\": \"tweet\"},\n",
-    "    id=10\n",
+    "    metadata={\"source\": \"tweet\"}\n",
     ")\n",
     "\n",
     "documents = [document_1, document_2, document_3, document_4, document_5, document_6, document_7, document_8, document_9, document_10]\n",
+    "uuids = [str(uuid4()) for _ in range(len(documents))]\n",
     "\n",
-    "vector_store.add_documents(documents=documents,ids=[uuid4() for _ in range(len(documents))])"
+    "vector_store.add_documents(documents=documents,ids=uuids)"
    ]
   },
   {
@@ -305,7 +315,7 @@
     }
    ],
    "source": [
-    "vector_store.delete(ids=[\"a9b84820-3445-4810-a46c-e77b76ab85bc\"])"
+    "vector_store.delete(ids=uuids[-1])"
    ]
   },
   {
@@ -394,8 +404,6 @@
     "\n",
     "You can also transform the vector store into a retriever for easier usage in your chains. \n",
     "\n",
-    "#### Retriever invocation\n",
-    "\n",
     "Here is how to transform your vector store into a retriever and then invoke the retreiever with a simple query and filter."
    ]
   },
@@ -442,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "id": "9b3cc97b",
    "metadata": {},
    "outputs": [],
