--- a/docs/docs/integrations/vectorstores/chroma.ipynb
+++ b/docs/docs/integrations/vectorstores/chroma.ipynb
@@ -18,24 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "83a43688",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "grpcio-tools 1.65.1 requires grpcio>=1.65.1, but you have grpcio 1.63.0 which is incompatible.\n",
-      "grpcio-tools 1.65.1 requires protobuf<6.0dev,>=5.26.1, but you have protobuf 4.25.4 which is incompatible.\u001b[0m\u001b[31m\n",
-      "\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.1.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pip install -qU \"langchain-chroma>=0.1.2\""
    ]
@@ -55,7 +41,7 @@
    "id": "cd17cfed",
    "metadata": {},
    "source": [
-    "If you want to get automated tracing of your model calls you can also set your [LangSmith](https://docs.smith.langchain.com/) API key by uncommenting below:"
+    "If you want to get best in-class automated tracing of your model calls you can also set your [LangSmith](https://docs.smith.langchain.com/) API key by uncommenting below:"
    ]
   },
   {
@@ -74,31 +60,46 @@
    "id": "f47f73f4",
    "metadata": {},
    "source": [
-    "## Instantiation\n",
+    "## Initialization\n",
     "\n",
-    "To instantiate a vector store from `Chroma` you must provide an embedding function. In this example we will use the `OllamaEmbeddings` function since it is open source and does not require payment. You can read about `OllamaEmbeddings` at [this page](https://python.langchain.com/v0.2/docs/integrations/text_embedding/ollama/).\n",
+    "### Basic Initialization \n",
     "\n",
-    "### Basic Instantiation \n",
+    "Below is a basic initialization, including the use of a directory to save the data locally.\n",
     "\n",
-    "Below is a basic instantiation, including the use of a directory to save the data locally."
+    "```{=mdx}\n",
+    "import EmbeddingTabs from \"@theme/EmbeddingTabs\";\n",
+    "\n",
+    "<EmbeddingTabs/>\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
+   "id": "d3ed0a9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | output: false\n",
+    "# | echo: false\n",
+    "from langchain_openai import OpenAIEmbeddings\n",
+    "\n",
+    "embeddings = OpenAIEmbeddings(model=\"text-embedding-3-large\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "3ea11a7b",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_chroma import Chroma\n",
-    "from langchain_ollama import OllamaEmbeddings\n",
-    "\n",
-    "embedding_function = OllamaEmbeddings(model=\"llama3\")\n",
     "\n",
     "vector_store = Chroma(\n",
     "    collection_name=\"example_collection\",\n",
-    "    embedding_function=embedding_function,\n",
-    "    persist_directory=\"./chroma_db\" # Where to save data locally, remove if not neccesary\n",
+    "    embedding_function=embeddings,\n",
+    "    persist_directory=\"./chroma_langchain_db\" # Where to save data locally, remove if not neccesary\n",
     ")"
    ]
   },
@@ -107,30 +108,17 @@
    "id": "ccb62a8c",
    "metadata": {},
    "source": [
-    "### Instantiation from client\n",
+    "### Initialization from client\n",
     "\n",
-    "You can also instantiate from a `Chroma` client, which is particularly useful if you want easier access to the underlying database."
+    "You can also initialize from a `Chroma` client, which is particularly useful if you want easier access to the underlying database."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "3fe4457f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Add of existing embedding ID: 1\n",
-      "Add of existing embedding ID: 2\n",
-      "Add of existing embedding ID: 3\n",
-      "Insert of existing embedding ID: 1\n",
-      "Insert of existing embedding ID: 2\n",
-      "Insert of existing embedding ID: 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import chromadb\n",
     "\n",
@@ -141,7 +129,7 @@
     "vector_store_from_client = Chroma(\n",
     "    client=persistent_client,\n",
     "    collection_name=\"collection_name\",\n",
-    "    embedding_function=embedding_function,\n",
+    "    embedding_function=embeddings,\n",
     ")"
    ]
   },
@@ -152,49 +140,107 @@
    "source": [
     "## Manage vector store\n",
     "\n",
+    "Once you have created your vector store, we can interact with it by adding and deleting different items.\n",
+    "\n",
     "### Add items to vector store\n",
     "\n",
-    "We can add documents to our vector store by creating new `Document` objects and passing them in a list, along with a corresponding list of ids."
+    "We can add items to our vector store by using the `add_documents` function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "da279339",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['1', '2', '3']"
+       "['f22ed484-6db3-4b76-adb1-18a777426cd6',\n",
+       " 'e0d5bab4-6453-4511-9a37-023d9d288faa',\n",
+       " '877d76b8-3580-4d9e-a13f-eed0fa3d134a',\n",
+       " '26eaccab-81ce-4c0a-8e76-bf542647df18',\n",
+       " 'bcaa8239-7986-4050-bf40-e14fb7dab997',\n",
+       " 'cdc44b38-a83f-4e49-b249-7765b334e09d',\n",
+       " 'a7a35354-2687-4bc2-8242-3849a4d18d34',\n",
+       " '8780caf1-d946-4f27-a707-67d037e9e1d8',\n",
+       " 'dec6af2a-7326-408f-893d-7d7d717dfda9',\n",
+       " '3b18e210-bb59-47a0-8e17-c8e51176ea5e']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from langchain_core.documents import Document\n",
+    "from uuid import uuid4\n",
     "\n",
     "document_1 = Document(\n",
-    "    page_content=\"foo\",\n",
-    "    metadata={\"source\": \"https://example.com\"}\n",
+    "    page_content=\"I had chocalate chip pancakes and scrambled eggs for breakfast this morning.\",\n",
+    "    metadata={\"source\": \"tweet\"},\n",
+    "    id=1\n",
     ")\n",
     "\n",
     "document_2 = Document(\n",
-    "    page_content=\"bar\",\n",
-    "    metadata={\"source\": \"https://example.com\"}\n",
+    "    page_content=\"The weather forecast for tomorrow is cloudy and overcast, with a high of 62 degrees.\",\n",
+    "    metadata={\"source\": \"news\"},\n",
+    "    id=2\n",
     ")\n",
     "\n",
     "document_3 = Document(\n",
-    "    page_content=\"baz\",\n",
-    "    metadata={\"source\": \"https://example.com\"}\n",
+    "    page_content=\"Building an exciting new project with LangChain - come check it out!\",\n",
+    "    metadata={\"source\": \"tweet\"},\n",
+    "    id=3\n",
     ")\n",
     "\n",
-    "documents = [document_1, document_2, document_3]\n",
+    "document_4 = Document(\n",
+    "    page_content=\"Robbers broke into the city bank and stole $1 million in cash.\",\n",
+    "    metadata={\"source\": \"news\"},\n",
+    "    id=4\n",
+    ")\n",
     "\n",
-    "vector_store.add_documents(documents=documents,ids=[\"1\",\"2\",\"3\"])"
+    "document_5 = Document(\n",
+    "    page_content=\"Wow! That was an amazing movie. I can't wait to see it again.\",\n",
+    "    metadata={\"source\": \"tweet\"},\n",
+    "    id=5\n",
+    ")\n",
+    "\n",
+    "document_6 = Document(\n",
+    "    page_content=\"Is the new iPhone worth the price? Read this review to find out.\",\n",
+    "    metadata={\"source\": \"website\"},\n",
+    "    id=6\n",
+    ")\n",
+    "\n",
+    "document_7 = Document(\n",
+    "    page_content=\"The top 10 soccer players in the world right now.\",\n",
+    "    metadata={\"source\": \"website\"},\n",
+    "    id=7\n",
+    ")\n",
+    "\n",
+    "document_8 = Document(\n",
+    "    page_content=\"LangGraph is the best framework for building stateful, agentic applications!\",\n",
+    "    metadata={\"source\": \"tweet\"},\n",
+    "    id=8\n",
+    ")\n",
+    "\n",
+    "document_9 = Document(\n",
+    "    page_content=\"The stock market is down 500 points today due to fears of a recession.\",\n",
+    "    metadata={\"source\": \"news\"},\n",
+    "    id=9\n",
+    ")\n",
+    "\n",
+    "document_10 = Document(\n",
+    "    page_content=\"I have a bad feeling I am going to get deleted :(\",\n",
+    "    metadata={\"source\": \"tweet\"},\n",
+    "    id=10\n",
+    ")\n",
+    "\n",
+    "documents = [document_1, document_2, document_3, document_4, document_5, document_6, document_7, document_8, document_9, document_10]\n",
+    "uuids = [str(uuid4()) for _ in range(len(documents))]\n",
+    "\n",
+    "vector_store.add_documents(documents=documents,ids=uuids)"
    ]
   },
   {
@@ -209,19 +255,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "ef5dbd1e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "updated_document = Document(\n",
-    "    page_content=\"qux\",\n",
-    "    metadata={\"source\": \"https://another-example.com\"}\n",
+    "updated_document_1 = Document(\n",
+    "    page_content=\"I had chocalate chip pancakes and fried eggs for breakfast this morning.\",\n",
+    "    metadata={\"source\": \"tweet\"},\n",
+    "    id=1\n",
     ")\n",
     "\n",
-    "vector_store.update_document(document_id=\"1\",document=updated_document)\n",
-    "# You can also update miltiple documents at once\n",
-    "vector_store.update_documents(ids=[\"1\",\"2\"],documents=[updated_document,updated_document])"
+    "updated_document_2 = Document(\n",
+    "    page_content=\"The weather forecast for tomorrow is sunny and warm, with a high of 82 degrees.\",\n",
+    "    metadata={\"source\": \"news\"},\n",
+    "    id=2\n",
+    ")\n",
+    "\n",
+    "vector_store.update_document(document_id=uuids[0],document=updated_document_1)\n",
+    "# You can also update multiple documents at once\n",
+    "vector_store.update_documents(ids=uuids[:2],documents=[updated_document_1,updated_document_1])"
    ]
   },
   {
@@ -236,12 +289,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "56f17791",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vector_store.delete(ids=[\"3\"])"
+    "vector_store.delete(ids=uuids[-1])"
    ]
   },
   {
@@ -255,12 +308,14 @@
     "\n",
     "### Query directly\n",
     "\n",
+    "#### Similarity search\n",
+    "\n",
     "Performing a simple similarity search can be done as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "e2b96fcf",
    "metadata": {},
    "outputs": [
@@ -268,14 +323,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* qux [{'source': 'https://another-example.com'}]\n"
+      "* Building an exciting new project with LangChain - come check it out! [{'source': 'tweet'}]\n",
+      "* LangGraph is the best framework for building stateful, agentic applications! [{'source': 'tweet'}]\n"
      ]
     }
    ],
    "source": [
-    "results = vector_store.similarity_search(query=\"thud\",k=1,filter={\"source\":\"https://another-example.com\"})\n",
-    "for doc in results:\n",
-    "    print(f\"* {doc.page_content} [{doc.metadata}]\")"
+    "results = vector_store.similarity_search(\"LangChain provides abstractions to make working with LLMs easy\", k=2, filter={\"source\": \"tweet\"})\n",
+    "for res in results:\n",
+    "    print(f\"* {res.page_content} [{res.metadata}]\")"
    ]
   },
   {
@@ -283,12 +339,14 @@
    "id": "cdd117ea",
    "metadata": {},
    "source": [
+    "#### Similarity search with score\n",
+    "\n",
     "If you want to execute a similarity search and receive the corresponding scores you can run:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "2768a331",
    "metadata": {},
    "outputs": [
@@ -296,14 +354,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* [SIM=11593.251037] qux [{'source': 'https://another-example.com'}]\n"
+      "* [SIM=1.726390] The stock market is down 500 points today due to fears of a recession. [{'source': 'news'}]\n"
      ]
     }
    ],
    "source": [
-    "results = vector_store.similarity_search_with_score(query=\"thud\",k=1,filter={\"source\":\"https://another-example.com\"})\n",
-    "for doc, score in results:\n",
-    "    print(f\"* [SIM={score:3f}] {doc.page_content} [{doc.metadata}]\")"
+    "results = vector_store.similarity_search_with_score(\"Will it be hot tomorrow?\", k=1, filter={\"source\": \"news\"})\n",
+    "for res, score in results:\n",
+    "    print(f\"* [SIM={score:3f}] {res.page_content} [{res.metadata}]\")"
    ]
   },
   {
@@ -311,12 +369,14 @@
    "id": "92b436c8",
    "metadata": {},
    "source": [
+    "#### Search by vector\n",
+    "\n",
     "You can also search by vector:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "8ea434a5",
    "metadata": {},
    "outputs": [
@@ -324,12 +384,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* qux [{'source': 'https://another-example.com'}]\n"
+      "* I had chocalate chip pancakes and fried eggs for breakfast this morning. [{'source': 'tweet'}]\n"
      ]
     }
    ],
    "source": [
-    "results = vector_store.similarity_search_by_vector(embedding=embedding_function.embed_query(\"thud\"),k=1,filter={\"source\":\"https://another-example.com\"})\n",
+    "results = vector_store.similarity_search_by_vector(embedding=embeddings.embed_query(\"I love green eggs and ham!\"),k=1)\n",
     "for doc in results:\n",
     "    print(f\"* {doc.page_content} [{doc.metadata}]\")"
    ]
@@ -339,7 +399,9 @@
    "id": "9c1c1e6f",
    "metadata": {},
    "source": [
-    "There are even more search functions, such as searching by image or using maximum marginal relevance search. For a full list of the search functions provided by the `Chroma` vectorstore, please visit the [API reference](https://api.python.langchain.com/en/latest/vectorstores/langchain_chroma.vectorstores.Chroma.html).\n",
+    "#### Other search methods\n",
+    "\n",
+    "There are a variety of other search methods that are not covered in this notebook, such as MMR search or searching by vector. For a full list of the search abilities available for `AstraDBVectorStore` check out the [API reference](https://api.python.langchain.com/en/latest/vectorstores/langchain_astradb.vectorstores.AstraDBVectorStore.html).\n",
     "\n",
     "### Query by turning into retriever\n",
     "\n",
@@ -348,24 +410,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "7b6f7867",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Number of requested results 20 is greater than number of elements in index 2, updating n_results = 2\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[Document(metadata={'source': 'https://another-example.com'}, page_content='qux')]"
+       "[Document(metadata={'source': 'news'}, page_content='Robbers broke into the city bank and stole $1 million in cash.')]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,9 +428,9 @@
    "source": [
     "retriever = vector_store.as_retriever(\n",
     "    search_type=\"mmr\",\n",
-    "    search_kwargs={\"k\": 1}\n",
+    "    search_kwargs={\"k\": 1, \"fetch_k\": 5}\n",
     ")\n",
-    "retriever.invoke(\"thud\")"
+    "retriever.invoke(\"Stealing from the bank is a crime\", filter={\"source\": \"news\"})"
    ]
   },
   {
@@ -383,45 +438,52 @@
    "id": "a2b7b73c",
    "metadata": {},
    "source": [
-    "Using retriever in a simple RAG chain:"
+    "## Chain usage\n",
+    "\n",
+    "The code below shows how to use the vector store as a retriever in a simple RAG chain:\n",
+    "\n",
+    "```{=mdx}\n",
+    "import ChatModelTabs from \"@theme/ChatModelTabs\";\n",
+    "\n",
+    "<ChatModelTabs customVarName=\"llm\" />\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
+   "id": "9aad065b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | output: false\n",
+    "# | echo: false\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "84a19f48",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Number of requested results 20 is greater than number of elements in index 2, updating n_results = 2\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "\"I'm sorry, I don't have enough information to answer that question.\""
+       "'LangGraph is used for building stateful, agentic applications. It provides a framework that supports the development of such applications efficiently.'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain_openai import ChatOpenAI\n",
     "from langchain import hub\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.runnables import RunnablePassthrough\n",
-    "\n",
-    "\n",
-    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\")\n",
     "\n",
     "prompt = hub.pull(\"rlm/rag-prompt\")\n",
     "\n",
@@ -435,7 +497,7 @@
     "    | StrOutputParser()\n",
     ")\n",
     "\n",
-    "rag_chain.invoke(\"thud\")"
+    "rag_chain.invoke(\"What is LangGraph used for?\")"
    ]
   },
   {
