--- a/docs/docs/integrations/vectorstores/elasticsearch.ipynb
+++ b/docs/docs/integrations/vectorstores/elasticsearch.ipynb
@@ -20,21 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e5bbffe2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.1.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install -qU langchain-elasticsearch"
    ]
@@ -89,24 +78,42 @@
    "source": [
     "\n",
     "### Running with Authentication\n",
-    "For production, we recommend you run with security enabled. To connect with login credentials, you can use the parameters `es_api_key` or `es_user` and `es_password`."
+    "For production, we recommend you run with security enabled. To connect with login credentials, you can use the parameters `es_api_key` or `es_user` and `es_password`.\n",
+    "\n",
+    "```{=mdx}\n",
+    "import EmbeddingTabs from \"@theme/EmbeddingTabs\";\n",
+    "\n",
+    "<EmbeddingTabs/>\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "91399482",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | output: false\n",
+    "# | echo: false\n",
+    "from langchain_openai import OpenAIEmbeddings\n",
+    "\n",
+    "embeddings = OpenAIEmbeddings(model=\"text-embedding-3-large\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "3fa3cffa",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_elasticsearch import ElasticsearchStore\n",
-    "from langchain_ollama import OllamaEmbeddings\n",
-    "embedding_function = OllamaEmbeddings(model=\"llama3\")\n",
     "\n",
     "elastic_vector_search = ElasticsearchStore(\n",
     "    es_url=\"http://localhost:9200\",\n",
-    "    index_name=\"test_index\",\n",
-    "    embedding=embedding_function,\n",
+    "    index_name=\"langchain_index\",\n",
+    "    embedding=embeddings,\n",
     "    es_user=\"elastic\",\n",
     "    es_password=\"changeme\"\n",
     ")"
@@ -150,10 +157,29 @@
     "elastic_vector_search = ElasticsearchStore(\n",
     "    es_cloud_id=\"<cloud_id>\",\n",
     "    index_name=\"test_index\",\n",
-    "    embedding=embedding_function,\n",
+    "    embedding=embeddings,\n",
     "    es_user=\"elastic\",\n",
     "    es_password=\"changeme\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "406eefe8",
+   "metadata": {},
+   "source": [
+    "If you want to get best in-class automated tracing of your model calls you can also set your [LangSmith](https://docs.smith.langchain.com/) API key by uncommenting below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b109bf1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# os.environ[\"LANGSMITH_API_KEY\"] = getpass.getpass(\"Enter your LangSmith API key: \")\n",
+    "# os.environ[\"LANGSMITH_TRACING\"] = \"true\""
    ]
   },
   {
@@ -164,14 +190,14 @@
     "tags": []
    },
    "source": [
-    "## Instantiation\n",
+    "## Initialization\n",
     "\n",
     "Elasticsearch is running locally on localhost:9200 with [docker](#running-elasticsearch-via-docker). For more details on how to connect to Elasticsearch from Elastic Cloud, see [connecting with authentication](#running-with-authentication) above.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "aac9563e",
    "metadata": {
     "id": "aac9563e",
@@ -180,12 +206,10 @@
    "outputs": [],
    "source": [
     "from langchain_elasticsearch import ElasticsearchStore\n",
-    "from langchain_ollama import OllamaEmbeddings\n",
-    "embedding_function = OllamaEmbeddings(model=\"llama3\")\n",
     "\n",
     "vector_store = ElasticsearchStore(\n",
     "    \"langchain-demo\",\n",
-    "    embedding=embedding_function,\n",
+    "    embedding=embeddings,\n",
     "    es_url=\"http://localhost:9201\"\n",
     ")"
    ]
@@ -202,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "12eb86d8",
    "metadata": {
     "id": "12eb86d8",
@@ -212,36 +236,81 @@
     {
      "data": {
       "text/plain": [
-       "['1', '2', '3']"
+       "['21cca03c-9089-42d2-b41c-3d156be2b519',\n",
+       " 'a6ceb967-b552-4802-bb06-c0e95fce386e',\n",
+       " '3a35fac4-e5f0-493b-bee0-9143b41aedae',\n",
+       " '176da099-66b1-4d6a-811b-dfdfe0808d30',\n",
+       " 'ecfa1a30-3c97-408b-80c0-5c43d68bf5ff',\n",
+       " 'c0f08baa-e70b-4f83-b387-c6e0a0f36f73',\n",
+       " '489b2c9c-1925-43e1-bcf0-0fa94cf1cbc4',\n",
+       " '408c6503-9ba4-49fd-b1cc-95584cd914c5',\n",
+       " '5248c899-16d5-4377-a9e9-736ca443ad4f',\n",
+       " 'ca182769-c4fc-4e25-8f0a-8dd0a525955c']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from langchain_core.documents import Document\n",
+    "from uuid import uuid4\n",
     "\n",
     "document_1 = Document(\n",
-    "    page_content=\"foo\",\n",
-    "    metadata={\"source\": \"https://example.com\"}\n",
+    "    page_content=\"I had chocalate chip pancakes and scrambled eggs for breakfast this morning.\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
     ")\n",
     "\n",
     "document_2 = Document(\n",
-    "    page_content=\"bar\",\n",
-    "    metadata={\"source\": \"https://another-example.com\"}\n",
+    "    page_content=\"The weather forecast for tomorrow is cloudy and overcast, with a high of 62 degrees.\",\n",
+    "    metadata={\"source\": \"news\"}\n",
     ")\n",
     "\n",
     "document_3 = Document(\n",
-    "    page_content=\"baz\",\n",
-    "    metadata={\"source\": \"https://example.com\"}\n",
+    "    page_content=\"Building an exciting new project with LangChain - come check it out!\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
     ")\n",
     "\n",
-    "documents = [document_1, document_2, document_3]\n",
-    "vector_store.add_documents(\n",
-    "    documents,ids=['1','2','3']\n",
-    ")"
+    "document_4 = Document(\n",
+    "    page_content=\"Robbers broke into the city bank and stole $1 million in cash.\",\n",
+    "    metadata={\"source\": \"news\"}\n",
+    ")\n",
+    "\n",
+    "document_5 = Document(\n",
+    "    page_content=\"Wow! That was an amazing movie. I can't wait to see it again.\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
+    ")\n",
+    "\n",
+    "document_6 = Document(\n",
+    "    page_content=\"Is the new iPhone worth the price? Read this review to find out.\",\n",
+    "    metadata={\"source\": \"website\"}\n",
+    ")\n",
+    "\n",
+    "document_7 = Document(\n",
+    "    page_content=\"The top 10 soccer players in the world right now.\",\n",
+    "    metadata={\"source\": \"website\"}\n",
+    ")\n",
+    "\n",
+    "document_8 = Document(\n",
+    "    page_content=\"LangGraph is the best framework for building stateful, agentic applications!\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
+    ")\n",
+    "\n",
+    "document_9 = Document(\n",
+    "    page_content=\"The stock market is down 500 points today due to fears of a recession.\",\n",
+    "    metadata={\"source\": \"news\"}\n",
+    ")\n",
+    "\n",
+    "document_10 = Document(\n",
+    "    page_content=\"I have a bad feeling I am going to get deleted :(\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
+    ")\n",
+    "\n",
+    "documents = [document_1, document_2, document_3, document_4, document_5, document_6, document_7, document_8, document_9, document_10]\n",
+    "uuids = [str(uuid4()) for _ in range(len(documents))]\n",
+    "\n",
+    "vector_store.add_documents(documents=documents,ids=uuids)"
    ]
   },
   {
@@ -254,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "31c3b785",
    "metadata": {},
    "outputs": [
@@ -264,13 +333,13 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vector_store.delete(ids=[\"3\"])"
+    "vector_store.delete(ids=[uuids[-1]])"
    ]
   },
   {
@@ -284,12 +353,14 @@
     "\n",
     "### Query directly\n",
     "\n",
-    "Performing a simple similarity search can be done as follows:"
+    "#### Similarity search\n",
+    "\n",
+    "Performing a simple similarity search with filtering on metadata can be done as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "da079ceb",
    "metadata": {},
    "outputs": [
@@ -297,15 +368,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* foo [{'source': 'https://example.com'}]\n"
+      "* Building an exciting new project with LangChain - come check it out! [{'source': 'tweet'}]\n",
+      "* LangGraph is the best framework for building stateful, agentic applications! [{'source': 'tweet'}]\n"
      ]
     }
    ],
    "source": [
-    "vector_store.client.indices.refresh(index=\"langchain-demo\")\n",
-    "results = vector_store.similarity_search(query=\"thud\",k=1, filter=[{\"term\": {\"metadata.source.keyword\": \"https://example.com\"}}])\n",
-    "for doc in results:\n",
-    "    print(f\"* {doc.page_content} [{doc.metadata}]\")"
+    "results = vector_store.similarity_search(query=\"LangChain provides abstractions to make working with LLMs easy\", k=2, filter=[{\"term\": {\"metadata.source.keyword\": \"tweet\"}}])\n",
+    "for res in results:\n",
+    "    print(f\"* {res.page_content} [{res.metadata}]\")"
    ]
   },
   {
@@ -313,12 +384,14 @@
    "id": "a0fda72e",
    "metadata": {},
    "source": [
+    "#### Similarity search with score\n",
+    "\n",
     "If you want to execute a similarity search and receive the corresponding scores you can run:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "1013c9e8",
    "metadata": {},
    "outputs": [
@@ -326,12 +399,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* [SIM=0.760690] bar [{'source': 'https://another-example.com'}]\n"
+      "* [SIM=0.765887] The weather forecast for tomorrow is cloudy and overcast, with a high of 62 degrees. [{'source': 'news'}]\n"
      ]
     }
    ],
    "source": [
-    "results = vector_store.similarity_search_with_score(query=\"thud\",k=1, filter=[{\"term\": {\"metadata.source.keyword\": \"https://another-example.com\"}}])\n",
+    "results = vector_store.similarity_search_with_score(query=\"Will it be hot tomorrow\",k=1, filter=[{\"term\": {\"metadata.source.keyword\": \"news\"}}])\n",
     "for doc, score in results:\n",
     "    print(f\"* [SIM={score:3f}] {doc.page_content} [{doc.metadata}]\")"
    ]
@@ -348,20 +421,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "2db8b6a5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(page_content='baz'),\n",
-       " Document(page_content='bar baz'),\n",
-       " Document(page_content='bar'),\n",
-       " Document(metadata={'source': 'https://another-example.com'}, page_content='bar')]"
+       "[Document(metadata={'source': 'news'}, page_content='Robbers broke into the city bank and stole $1 million in cash.'),\n",
+       " Document(metadata={'source': 'news'}, page_content='The stock market is down 500 points today due to fears of a recession.'),\n",
+       " Document(metadata={'source': 'website'}, page_content='Is the new iPhone worth the price? Read this review to find out.'),\n",
+       " Document(metadata={'source': 'tweet'}, page_content='Building an exciting new project with LangChain - come check it out!')]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +444,7 @@
     "    search_type=\"similarity_score_threshold\",\n",
     "    search_kwargs={'score_threshold': 0.2}\n",
     ")\n",
-    "retriever.invoke(\"thud\")"
+    "retriever.invoke(\"Stealing from the bank is a crime\")"
    ]
   },
   {
@@ -379,34 +452,52 @@
    "id": "17b509ae",
    "metadata": {},
    "source": [
-    "Using retriever in a simple RAG chain:"
+    "## Chain usage\n",
+    "\n",
+    "The code below shows how to use the vector store as a retriever in a simple RAG chain:\n",
+    "\n",
+    "```{=mdx}\n",
+    "import ChatModelTabs from \"@theme/ChatModelTabs\";\n",
+    "\n",
+    "<ChatModelTabs customVarName=\"llm\" />\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
+   "id": "58e17804",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | output: false\n",
+    "# | echo: false\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "01dac420",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"I don't know.\""
+       "'LanGraph is used for building stateful, agentic applications. It serves as a framework to facilitate the development of exciting new projects.'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain_openai import ChatOpenAI\n",
     "from langchain import hub\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.runnables import RunnablePassthrough\n",
-    "\n",
-    "\n",
-    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\")\n",
     "\n",
     "prompt = hub.pull(\"rlm/rag-prompt\")\n",
     "\n",
@@ -420,7 +511,7 @@
     "    | StrOutputParser()\n",
     ")\n",
     "\n",
-    "rag_chain.invoke(\"thud\")"
+    "rag_chain.invoke(\"What is LanGraph used for?\")"
    ]
   },
   {
