--- a/docs/docs/integrations/vectorstores/faiss.ipynb
+++ b/docs/docs/integrations/vectorstores/faiss.ipynb
@@ -11,10 +11,6 @@
     "\n",
     "You can find the FAISS documentation at [this page](https://faiss.ai/).\n",
     "\n",
-    "## Seti[]\n",
-    "\n",
-    "You'll need to install `langchain-community` with `pip install -qU langchain-community` to use this integration\n",
-    "\n",
     "This notebook shows how to use functionality related to the `FAISS` vector database. It will show functionality specific to this integration. After going through, it may be useful to explore [relevant use-case pages](/docs/how_to#qa-with-rag) to learn how to use this vectorstore as part of a larger chain."
    ]
   },
@@ -47,7 +43,7 @@
    "id": "408be78f-7b0e-44d4-8d48-56a6cb9b3fb9",
    "metadata": {},
    "source": [
-    "It's also helpful (but not needed) to set up [LangSmith](https://smith.langchain.com/) for best-in-class observability"
+    "If you want to get best in-class automated tracing of your model calls you can also set your [LangSmith](https://docs.smith.langchain.com/) API key by uncommenting below:"
    ]
   },
   {
@@ -66,14 +62,32 @@
    "id": "78dde98a-584f-4f2a-98d5-e776fd9558fa",
    "metadata": {},
    "source": [
-    "## Instantiation\n",
+    "## Initialization\n",
     "\n",
-    "We are going to use the `langchain_ollama` package for embeddings since it is free."
+    "```{=mdx}\n",
+    "import EmbeddingTabs from \"@theme/EmbeddingTabs\";\n",
+    "\n",
+    "<EmbeddingTabs/>\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
+   "id": "5b394da3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | output: false\n",
+    "# | echo: false\n",
+    "from langchain_openai import OpenAIEmbeddings\n",
+    "\n",
+    "embeddings = OpenAIEmbeddings(model=\"text-embedding-3-large\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "dc37144c-208d-4ab3-9f3a-0407a69fe052",
    "metadata": {
     "tags": []
@@ -81,15 +95,13 @@
    "outputs": [],
    "source": [
     "from langchain_community.vectorstores import FAISS\n",
-    "from langchain_ollama import OllamaEmbeddings\n",
     "import faiss\n",
     "from langchain_community.docstore.in_memory import InMemoryDocstore\n",
     "\n",
-    "embedding_function = OllamaEmbeddings(model=\"llama3\")\n",
-    "index = faiss.IndexFlatL2(len(embedding_function.embed_query(\"hello world\")))\n",
+    "index = faiss.IndexFlatL2(len(embeddings.embed_query(\"hello world\")))\n",
     "\n",
     "vector_store = FAISS(\n",
-    "    embedding_function=embedding_function,\n",
+    "    embedding_function=embeddings,\n",
     "    index=index,\n",
     "    docstore= InMemoryDocstore(),\n",
     "    index_to_docstore_id={}\n",
@@ -108,42 +120,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "3867e154",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['1', '2', '3']"
+       "['22f5ce99-cd6f-4e0c-8dab-664128307c72',\n",
+       " 'dc3f061b-5f88-4fa1-a966-413550c51891',\n",
+       " 'd33d890b-baad-47f7-b7c1-175f5f7b4e59',\n",
+       " '6e6c01d2-6020-4a7b-95da-ef43d43f01b5',\n",
+       " 'e677223d-ad75-4c1a-bef6-b5912bd1de03',\n",
+       " '47e2a168-6462-4ed2-b1d9-d9edfd7391d6',\n",
+       " '1e4d66d6-e155-4891-9212-f7be97f36c6a',\n",
+       " 'c0663096-e1a5-4665-b245-1c2e6c4fb653',\n",
+       " '8297474a-7f7c-4006-9865-398c1781b1bc',\n",
+       " '44e4be03-0a8d-4316-b3c4-f35f4bb2b532']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from langchain_core.documents import Document\n",
+    "from uuid import uuid4\n",
     "\n",
     "document_1 = Document(\n",
-    "    page_content=\"foo\",\n",
-    "    metadata={\"source\": \"https://example.com\"}\n",
+    "    page_content=\"I had chocalate chip pancakes and scrambled eggs for breakfast this morning.\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
     ")\n",
     "\n",
     "document_2 = Document(\n",
-    "    page_content=\"bar\",\n",
-    "    metadata={\"source\": \"https://another-example.com\"}\n",
+    "    page_content=\"The weather forecast for tomorrow is cloudy and overcast, with a high of 62 degrees.\",\n",
+    "    metadata={\"source\": \"news\"}\n",
     ")\n",
     "\n",
     "document_3 = Document(\n",
-    "    page_content=\"baz\",\n",
-    "    metadata={\"source\": \"https://example.com\"}\n",
+    "    page_content=\"Building an exciting new project with LangChain - come check it out!\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
     ")\n",
     "\n",
-    "documents = [document_1, document_2, document_3]\n",
+    "document_4 = Document(\n",
+    "    page_content=\"Robbers broke into the city bank and stole $1 million in cash.\",\n",
+    "    metadata={\"source\": \"news\"}\n",
+    ")\n",
     "\n",
-    "vector_store.add_documents(documents=documents,ids=[\"1\",\"2\",\"3\"])"
+    "document_5 = Document(\n",
+    "    page_content=\"Wow! That was an amazing movie. I can't wait to see it again.\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
+    ")\n",
+    "\n",
+    "document_6 = Document(\n",
+    "    page_content=\"Is the new iPhone worth the price? Read this review to find out.\",\n",
+    "    metadata={\"source\": \"website\"}\n",
+    ")\n",
+    "\n",
+    "document_7 = Document(\n",
+    "    page_content=\"The top 10 soccer players in the world right now.\",\n",
+    "    metadata={\"source\": \"website\"}\n",
+    ")\n",
+    "\n",
+    "document_8 = Document(\n",
+    "    page_content=\"LangGraph is the best framework for building stateful, agentic applications!\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
+    ")\n",
+    "\n",
+    "document_9 = Document(\n",
+    "    page_content=\"The stock market is down 500 points today due to fears of a recession.\",\n",
+    "    metadata={\"source\": \"news\"}\n",
+    ")\n",
+    "\n",
+    "document_10 = Document(\n",
+    "    page_content=\"I have a bad feeling I am going to get deleted :(\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
+    ")\n",
+    "\n",
+    "documents = [document_1, document_2, document_3, document_4, document_5, document_6, document_7, document_8, document_9, document_10]\n",
+    "uuids = [str(uuid4()) for _ in range(len(documents))]\n",
+    "\n",
+    "vector_store.add_documents(documents=documents,ids=uuids)"
    ]
   },
   {
@@ -156,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "c3db04bd",
    "metadata": {},
    "outputs": [
@@ -166,13 +224,13 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vector_store.delete(ids=[\"3\"])"
+    "vector_store.delete(ids=[uuids[-1]])"
    ]
   },
   {
@@ -186,12 +244,14 @@
     "\n",
     "### Query directly\n",
     "\n",
-    "Performing a simple similarity search can be done as follows:"
+    "#### Similarity search\n",
+    "\n",
+    "Performing a simple similarity search with filtering on metadata can be done as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "53d95d3f",
    "metadata": {},
    "outputs": [
@@ -199,14 +259,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* foo [{'source': 'https://example.com'}]\n"
+      "* Building an exciting new project with LangChain - come check it out! [{'source': 'tweet'}]\n",
+      "* LangGraph is the best framework for building stateful, agentic applications! [{'source': 'tweet'}]\n"
      ]
     }
    ],
    "source": [
-    "results = vector_store.similarity_search(query=\"thud\",k=1,filter={\"source\":\"https://example.com\"})\n",
-    "for doc in results:\n",
-    "    print(f\"* {doc.page_content} [{doc.metadata}]\")"
+    "results = vector_store.similarity_search(\"LangChain provides abstractions to make working with LLMs easy\", k=2, filter={\"source\": \"tweet\"})\n",
+    "for res in results:\n",
+    "    print(f\"* {res.page_content} [{res.metadata}]\")"
    ]
   },
   {
@@ -214,12 +275,14 @@
    "id": "5ae35069",
    "metadata": {},
    "source": [
-    "If you want to execute a similarity search and receive the corresponding scores you can run:"
+    "#### Similarity search with score\n",
+    "\n",
+    "You can also search with score:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "a9078ce9",
    "metadata": {},
    "outputs": [
@@ -227,14 +290,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* [SIM=21192.644531] bar [{'source': 'https://another-example.com'}]\n"
+      "* [SIM=0.893688] The weather forecast for tomorrow is cloudy and overcast, with a high of 62 degrees. [{'source': 'news'}]\n"
      ]
     }
    ],
    "source": [
-    "results = vector_store.similarity_search_with_score(query=\"thud\",k=1,filter={\"source\":\"https://another-example.com\"})\n",
-    "for doc, score in results:\n",
-    "    print(f\"* [SIM={score:3f}] {doc.page_content} [{doc.metadata}]\")"
+    "results = vector_store.similarity_search_with_score(\"Will it be hot tomorrow?\", k=1, filter={\"source\": \"news\"})\n",
+    "for res, score in results:\n",
+    "    print(f\"* [SIM={score:3f}] {res.page_content} [{res.metadata}]\")"
    ]
   },
   {
@@ -242,6 +305,9 @@
    "id": "e9091b1f",
    "metadata": {},
    "source": [
+    "#### Other search methods\n",
+    "\n",
+    "\n",
     "There are a variety of other ways to search a FAISS vector store. For a complete list of those methods, please refer to the [API Reference](https://api.python.langchain.com/en/latest/vectorstores/langchain_community.vectorstores.faiss.FAISS.html)\n",
     "\n",
     "### Query by turning into retriever\n",
@@ -251,17 +317,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "10da64fa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(metadata={'source': 'https://another-example.com'}, page_content='bar')]"
+       "[Document(metadata={'source': 'news'}, page_content='Robbers broke into the city bank and stole $1 million in cash.')]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +337,7 @@
     "    search_type=\"mmr\",\n",
     "    search_kwargs={\"k\": 1}\n",
     ")\n",
-    "retriever.invoke(\"thud\")"
+    "retriever.invoke(\"Stealing from the bank is a crime\", filter={\"source\": \"news\"})"
    ]
   },
   {
@@ -279,34 +345,52 @@
    "id": "5edd1909",
    "metadata": {},
    "source": [
-    "Using retriever in a simple RAG chain:"
+    "## Chain usage\n",
+    "\n",
+    "The code below shows how to use the vector store as a retriever in a simple RAG chain:\n",
+    "\n",
+    "```{=mdx}\n",
+    "import ChatModelTabs from \"@theme/ChatModelTabs\";\n",
+    "\n",
+    "<ChatModelTabs customVarName=\"llm\" />\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
+   "id": "6b792eaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | output: false\n",
+    "# | echo: false\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "1aca9435",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"I don't know, can you provide more context or clarify the question?\""
+       "'LangGraph is used for building stateful, agentic applications. It provides a framework that facilitates the development of these types of applications.'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain_openai import ChatOpenAI\n",
     "from langchain import hub\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.runnables import RunnablePassthrough\n",
-    "\n",
-    "\n",
-    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\")\n",
     "\n",
     "prompt = hub.pull(\"rlm/rag-prompt\")\n",
     "\n",
@@ -320,7 +404,7 @@
     "    | StrOutputParser()\n",
     ")\n",
     "\n",
-    "rag_chain.invoke(\"thud\")"
+    "rag_chain.invoke(\"What is LangGraph used for?\")"
    ]
   },
   {
@@ -334,31 +418,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "1b31fe27-e0b3-42c6-b17c-8270b517ee1f",
    "metadata": {},
    "outputs": [],
    "source": [
     "vector_store.save_local(\"faiss_index\")\n",
     "\n",
-    "new_vector_store = FAISS.load_local(\"faiss_index\", embedding_function,allow_dangerous_deserialization=True)\n",
+    "new_vector_store = FAISS.load_local(\"faiss_index\", embeddings,allow_dangerous_deserialization=True)\n",
     "\n",
     "docs = new_vector_store.similarity_search(\"qux\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "98378c4e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Document(metadata={'source': 'https://another-example.com'}, page_content='bar')"
+       "Document(metadata={'source': 'tweet'}, page_content='Building an exciting new project with LangChain - come check it out!')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,41 +462,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "9b8f5e31-3f40-4e94-8d97-5883125efba7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'10323c11-85c4-47fb-abcb-cbe0325bda02': Document(page_content='foo')}"
+       "{'b752e805-350e-4cf5-ba54-0883d46a3a44': Document(page_content='foo')}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "db1 = FAISS.from_texts([\"foo\"], embedding_function)\n",
-    "db2 = FAISS.from_texts([\"bar\"], embedding_function)\n",
+    "db1 = FAISS.from_texts([\"foo\"], embeddings)\n",
+    "db2 = FAISS.from_texts([\"bar\"], embeddings)\n",
     "\n",
     "db1.docstore._dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "83392605",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'bd993360-1468-454c-8fba-c70455b4e3db': Document(page_content='bar')}"
+       "{'08192d92-746d-4cd1-b681-bdfba411f459': Document(page_content='bar')}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "a3fcc1c7",
    "metadata": {},
    "outputs": [],
@@ -433,18 +517,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "41c51f89",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'10323c11-85c4-47fb-abcb-cbe0325bda02': Document(page_content='foo'),\n",
-       " 'bd993360-1468-454c-8fba-c70455b4e3db': Document(page_content='bar')}"
+       "{'b752e805-350e-4cf5-ba54-0883d46a3a44': Document(page_content='foo'),\n",
+       " '08192d92-746d-4cd1-b681-bdfba411f459': Document(page_content='bar')}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
