--- a/docs/docs/integrations/vectorstores/redis.ipynb
+++ b/docs/docs/integrations/vectorstores/redis.ipynb
@@ -198,7 +198,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Instantiation\n",
+    "If you want to get best in-class automated tracing of your model calls you can also set your [LangSmith](https://docs.smith.langchain.com/) API key by uncommenting below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# os.environ[\"LANGSMITH_API_KEY\"] = getpass.getpass(\"Enter your LangSmith API key: \")\n",
+    "# os.environ[\"LANGSMITH_TRACING\"] = \"true\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initialization\n",
     "\n",
     "The Redis VectorStore instance can be initialized in a number of ways. There are multiple class methods that can be used to initialize a Redis VectorStore instance.\n",
     "\n",
@@ -208,24 +225,41 @@
     "- ``Redis.from_texts_return_keys`` - Initialize from a list of texts (optionally with metadata) and return the keys\n",
     "- ``Redis.from_existing_index`` - Initialize from an existing Redis index\n",
     "\n",
-    "Below we will use the ``Redis.__init__`` method. We will use `langchain_ollama` for the embedding function since it is free to use."
+    "Below we will use the ``Redis.__init__`` method. \n",
+    "\n",
+    "```{=mdx}\n",
+    "import EmbeddingTabs from \"@theme/EmbeddingTabs\";\n",
+    "\n",
+    "<EmbeddingTabs/>\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | output: false\n",
+    "# | echo: false\n",
+    "from langchain_openai import OpenAIEmbeddings\n",
+    "\n",
+    "embeddings = OpenAIEmbeddings(model=\"text-embedding-3-large\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "from langchain_community.vectorstores.redis import Redis\n",
-    "from langchain_ollama import OllamaEmbeddings\n",
-    "embedding_function = OllamaEmbeddings(model=\"llama3\")\n",
     "\n",
     "vector_store = Redis(\n",
     "    redis_url=\"redis://localhost:6379\",\n",
-    "    embedding=embedding_function,\n",
+    "    embedding=embeddings,\n",
     "    index_name=\"users\",\n",
     ")"
    ]
@@ -236,46 +270,96 @@
    "source": [
     "## Manage vector store\n",
     "\n",
-    "### Add items to vector store"
+    "Once you have created your vector store, we can interact with it by adding and deleting different items.\n",
+    "\n",
+    "### Add items to vector store\n",
+    "\n",
+    "We can add items to our vector store by using the `add_documents` function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['doc:users:1', 'doc:users:2', 'doc:users:3']"
+       "['doc:users:622f5f19-9b4b-4896-9a16-e1e95f19db4b',\n",
+       " 'doc:users:032b489f-d37e-4bf1-85ec-4c2275be48ef',\n",
+       " 'doc:users:5daf0855-b352-45bd-9d29-e21ff66e38c8',\n",
+       " 'doc:users:b9204897-190b-4dd9-af2b-081ed4e9cbb0',\n",
+       " 'doc:users:9395caff-1a6a-46c1-bc5c-7c5558eadf46',\n",
+       " 'doc:users:28243c3d-463d-4662-936e-003a2dc0dc30',\n",
+       " 'doc:users:1e1cdb91-c226-4836-b38e-ee4b61444913',\n",
+       " 'doc:users:4005bba2-2a08-4160-a16f-5cc3cf9d4aea',\n",
+       " 'doc:users:8c88440a-06d2-4a68-95f1-c58d0cf99d29',\n",
+       " 'doc:users:cc20438f-741a-40fd-bed8-4f1cee113680']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from langchain_core.documents import Document\n",
+    "from uuid import uuid4\n",
     "\n",
     "document_1 = Document(\n",
-    "    page_content=\"foo\",\n",
-    "    metadata={\"source\": \"https://example.com\"}\n",
+    "    page_content=\"I had chocalate chip pancakes and scrambled eggs for breakfast this morning.\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
     ")\n",
     "\n",
     "document_2 = Document(\n",
-    "    page_content=\"bar\",\n",
-    "    metadata={\"source\": \"https://example.com\"}\n",
+    "    page_content=\"The weather forecast for tomorrow is cloudy and overcast, with a high of 62 degrees.\",\n",
+    "    metadata={\"source\": \"news\"}\n",
     ")\n",
     "\n",
     "document_3 = Document(\n",
-    "    page_content=\"baz\",\n",
-    "    metadata={\"source\": \"https://example.com\"}\n",
+    "    page_content=\"Building an exciting new project with LangChain - come check it out!\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
     ")\n",
     "\n",
-    "documents = [document_1, document_2, document_3]\n",
+    "document_4 = Document(\n",
+    "    page_content=\"Robbers broke into the city bank and stole $1 million in cash.\",\n",
+    "    metadata={\"source\": \"news\"}\n",
+    ")\n",
     "\n",
-    "vector_store.add_documents(documents=documents,ids=[\"1\",\"2\",\"3\"])"
+    "document_5 = Document(\n",
+    "    page_content=\"Wow! That was an amazing movie. I can't wait to see it again.\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
+    ")\n",
+    "\n",
+    "document_6 = Document(\n",
+    "    page_content=\"Is the new iPhone worth the price? Read this review to find out.\",\n",
+    "    metadata={\"source\": \"website\"}\n",
+    ")\n",
+    "\n",
+    "document_7 = Document(\n",
+    "    page_content=\"The top 10 soccer players in the world right now.\",\n",
+    "    metadata={\"source\": \"website\"}\n",
+    ")\n",
+    "\n",
+    "document_8 = Document(\n",
+    "    page_content=\"LangGraph is the best framework for building stateful, agentic applications!\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
+    ")\n",
+    "\n",
+    "document_9 = Document(\n",
+    "    page_content=\"The stock market is down 500 points today due to fears of a recession.\",\n",
+    "    metadata={\"source\": \"news\"}\n",
+    ")\n",
+    "\n",
+    "document_10 = Document(\n",
+    "    page_content=\"I have a bad feeling I am going to get deleted :(\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
+    ")\n",
+    "\n",
+    "documents = [document_1, document_2, document_3, document_4, document_5, document_6, document_7, document_8, document_9, document_10]\n",
+    "uuids = [str(uuid4()) for _ in range(len(documents))]\n",
+    "\n",
+    "vector_store.add_documents(documents=documents,ids=uuids)"
    ]
   },
   {
@@ -287,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -296,13 +380,13 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vector_store.delete(ids=[\"3\"])"
+    "vector_store.delete(ids=[uuids[-1]])"
    ]
   },
   {
@@ -316,21 +400,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m14:10:04\u001b[0m \u001b[34m[RedisVL]\u001b[0m \u001b[1;30mINFO\u001b[0m   Indices:\n",
-      "\u001b[32m14:10:04\u001b[0m \u001b[34m[RedisVL]\u001b[0m \u001b[1;30mINFO\u001b[0m   1. users\n"
+      "\u001b[32m17:24:03\u001b[0m \u001b[34m[RedisVL]\u001b[0m \u001b[1;30mINFO\u001b[0m   Indices:\n",
+      "\u001b[32m17:24:03\u001b[0m \u001b[34m[RedisVL]\u001b[0m \u001b[1;30mINFO\u001b[0m   1. users\n"
      ]
     }
    ],
    "source": [
     "# assumes you're running Redis locally (use --host, --port, --password, --username, to change this)\n",
-    "!rvl index listall --port 6380"
+    "!rvl index listall --port 6379"
    ]
   },
   {
@@ -345,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -365,18 +449,18 @@
       "│ Name           │ Attribute      │ Type   │ Field Option   │ Option Value   │ Field Option   │ Option Value   │ Field Option   │   Option Value │ Field Option    │ Option Value   │\n",
       "├────────────────┼────────────────┼────────┼────────────────┼────────────────┼────────────────┼────────────────┼────────────────┼────────────────┼─────────────────┼────────────────┤\n",
       "│ content        │ content        │ TEXT   │ WEIGHT         │ 1              │                │                │                │                │                 │                │\n",
-      "│ content_vector │ content_vector │ VECTOR │ algorithm      │ FLAT           │ data_type      │ FLOAT32        │ dim            │           4096 │ distance_metric │ COSINE         │\n",
+      "│ content_vector │ content_vector │ VECTOR │ algorithm      │ FLAT           │ data_type      │ FLOAT32        │ dim            │           3072 │ distance_metric │ COSINE         │\n",
       "╰────────────────┴────────────────┴────────┴────────────────┴────────────────┴────────────────┴────────────────┴────────────────┴────────────────┴─────────────────┴────────────────╯\n"
      ]
     }
    ],
    "source": [
-    "!rvl index info -i users --port 6380"
+    "!rvl index info -i users --port 6379"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -388,31 +472,31 @@
       "╭─────────────────────────────┬─────────────╮\n",
       "│ Stat Key                    │ Value       │\n",
       "├─────────────────────────────┼─────────────┤\n",
-      "│ num_docs                    │ 3           │\n",
-      "│ num_terms                   │ 3           │\n",
-      "│ max_doc_id                  │ 3           │\n",
-      "│ num_records                 │ 6           │\n",
+      "│ num_docs                    │ 10          │\n",
+      "│ num_terms                   │ 100         │\n",
+      "│ max_doc_id                  │ 10          │\n",
+      "│ num_records                 │ 116         │\n",
       "│ percent_indexed             │ 1           │\n",
       "│ hash_indexing_failures      │ 0           │\n",
-      "│ number_of_uses              │ 2           │\n",
-      "│ bytes_per_record_avg        │ 51          │\n",
-      "│ doc_table_size_mb           │ 0.000220299 │\n",
-      "│ inverted_sz_mb              │ 0.000291824 │\n",
-      "│ key_table_size_mb           │ 0.000110626 │\n",
+      "│ number_of_uses              │ 1           │\n",
+      "│ bytes_per_record_avg        │ 88.2931     │\n",
+      "│ doc_table_size_mb           │ 0.00108719  │\n",
+      "│ inverted_sz_mb              │ 0.00976753  │\n",
+      "│ key_table_size_mb           │ 0.000304222 │\n",
       "│ offset_bits_per_record_avg  │ 8           │\n",
-      "│ offset_vectors_sz_mb        │ 2.86102e-06 │\n",
-      "│ offsets_per_term_avg        │ 0.5         │\n",
-      "│ records_per_doc_avg         │ 2           │\n",
+      "│ offset_vectors_sz_mb        │ 0.000102043 │\n",
+      "│ offsets_per_term_avg        │ 0.922414    │\n",
+      "│ records_per_doc_avg         │ 11.6        │\n",
       "│ sortable_values_size_mb     │ 0           │\n",
-      "│ total_indexing_time         │ 1.137       │\n",
-      "│ total_inverted_index_blocks │ 3           │\n",
-      "│ vector_index_sz_mb          │ 16.0084     │\n",
+      "│ total_indexing_time         │ 1.373       │\n",
+      "│ total_inverted_index_blocks │ 100         │\n",
+      "│ vector_index_sz_mb          │ 12.0086     │\n",
       "╰─────────────────────────────┴─────────────╯\n"
      ]
     }
    ],
    "source": [
-    "!rvl stats -i users --port 6380"
+    "!rvl stats -i users --port 6379"
    ]
   },
   {
@@ -432,58 +516,65 @@
     "\n",
     "### Query directly\n",
     "\n",
+    "#### Similarity search\n",
+    "\n",
     "Performing a simple similarity search can be done as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* baz [{'id': 'doc:users:3'}]\n"
+      "* Building an exciting new project with LangChain - come check it out! [{'id': 'doc:users:5daf0855-b352-45bd-9d29-e21ff66e38c8'}]\n",
+      "* LangGraph is the best framework for building stateful, agentic applications! [{'id': 'doc:users:4005bba2-2a08-4160-a16f-5cc3cf9d4aea'}]\n"
      ]
     }
    ],
    "source": [
-    "results = vector_store.similarity_search(query=\"thud\",k=1)#filter={\"source\":\"https://another-example.com\"})\n",
-    "for doc in results:\n",
-    "    print(f\"* {doc.page_content} [{doc.metadata}]\")"
+    "results = vector_store.similarity_search(\"LangChain provides abstractions to make working with LLMs easy\", k=2)\n",
+    "for res in results:\n",
+    "    print(f\"* {res.page_content} [{res.metadata}]\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want to execute a similarity search and receive the corresponding scores you can run:"
+    "#### Similarity search with score\n",
+    "\n",
+    "You can also search with score:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* [SIM=0.417400] baz [{'id': 'doc:users:3'}]\n"
+      "* [SIM=0.446900] The weather forecast for tomorrow is cloudy and overcast, with a high of 62 degrees. [{'id': 'doc:users:032b489f-d37e-4bf1-85ec-4c2275be48ef'}]\n"
      ]
     }
    ],
    "source": [
-    "results = vector_store.similarity_search_with_score(query=\"thud\",k=1)\n",
-    "for doc, score in results:\n",
-    "    print(f\"* [SIM={score:3f}] {doc.page_content} [{doc.metadata}]\")"
+    "results = vector_store.similarity_search_with_score(\"Will it be hot tomorrow?\", k=1)\n",
+    "for res, score in results:\n",
+    "    print(f\"* [SIM={score:3f}] {res.page_content} [{res.metadata}]\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Other search methods\n",
+    "\n",
     "For a list of all the search functions available to the `Redis` vector store, please refer to the [API reference](https://api.python.langchain.com/en/latest/vectorstores/langchain_community.vectorstores.redis.base.Redis.html)\n",
     "\n",
     "## Connect to an existing Index\n",
@@ -846,34 +937,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "retriever = vector_store.as_retriever(search_type=\"similarity\", search_kwargs={\"k\": 4})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(metadata={'id': 'doc:users:3'}, page_content='baz'),\n",
-       " Document(metadata={'id': 'doc:users:2'}, page_content='bar'),\n",
-       " Document(metadata={'id': 'doc:users:1'}, page_content='foo')]"
+       "[Document(metadata={'id': 'doc:users:b9204897-190b-4dd9-af2b-081ed4e9cbb0'}, page_content='Robbers broke into the city bank and stole $1 million in cash.')]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "docs = retriever.invoke(\"qux\")\n",
-    "docs"
+    "retriever = vector_store.as_retriever(\n",
+    "    search_type=\"similarity_score_threshold\",\n",
+    "    search_kwargs={\"k\": 1, \"score_threshold\": 0.2},\n",
+    ")\n",
+    "retriever.invoke(\"Stealing from the bank is a crime\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chain usage\n",
+    "\n",
+    "The code below shows how to use the vector store as a retriever in a simple RAG chain:\n",
+    "\n",
+    "```{=mdx}\n",
+    "import ChatModelTabs from \"@theme/ChatModelTabs\";\n",
+    "\n",
+    "<ChatModelTabs customVarName=\"llm\" />\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | output: false\n",
+    "# | echo: false\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'LangGraph is used for building stateful, agentic applications. It provides a framework to facilitate the development of such applications.'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain import hub\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "\n",
+    "prompt = hub.pull(\"rlm/rag-prompt\")\n",
+    "\n",
+    "def format_docs(docs):\n",
+    "    return \"\\n\\n\".join(doc.page_content for doc in docs)\n",
+    "\n",
+    "rag_chain = (\n",
+    "    {\"context\": retriever | format_docs, \"question\": RunnablePassthrough()}\n",
+    "    | prompt\n",
+    "    | llm\n",
+    "    | StrOutputParser()\n",
+    ")\n",
+    "\n",
+    "rag_chain.invoke(\"What is LangGraph used for?\")"
    ]
   },
   {
