--- a/docs/docs/integrations/vectorstores/milvus.ipynb
+++ b/docs/docs/integrations/vectorstores/milvus.ipynb
@@ -18,25 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a62cff8a-bcf7-4e33-bbbc-76999c2e3e20",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "grpcio-tools 1.65.1 requires grpcio>=1.65.1, but you have grpcio 1.63.0 which is incompatible.\u001b[0m\u001b[31m\n",
-      "\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.1.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install -qU  langchain_milvus langchain-ollama"
    ]
@@ -52,14 +39,32 @@
     "\n",
     "No credentials are needed to use the `Milvus` vector store.\n",
     "\n",
-    "## Instantiation\n",
+    "## Initialization\n",
     "\n",
-    "We will use `langchain_ollama` embeddings for this notebook since they are free to use."
+    "```{=mdx}\n",
+    "import EmbeddingTabs from \"@theme/EmbeddingTabs\";\n",
+    "\n",
+    "<EmbeddingTabs/>\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
+   "id": "a7dd253f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | output: false\n",
+    "# | echo: false\n",
+    "from langchain_openai import OpenAIEmbeddings\n",
+    "\n",
+    "embeddings = OpenAIEmbeddings(model=\"text-embedding-3-large\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "dcf88bdf",
    "metadata": {
     "tags": []
@@ -67,15 +72,13 @@
    "outputs": [],
    "source": [
     "from langchain_milvus import Milvus\n",
-    "from langchain_ollama import OllamaEmbeddings\n",
-    "embedding_function = OllamaEmbeddings(model=\"llama3\")\n",
     "\n",
     "# The easiest way is to use Milvus Lite where everything is stored in a local file.\n",
     "# If you have a Milvus server you can use the server URI such as \"http://localhost:19530\".\n",
-    "URI = \"./milvus_demo.db\"\n",
+    "URI = \"./milvus_example.db\"\n",
     "\n",
     "vector_store = Milvus(\n",
-    "    embedding_function=embedding_function,\n",
+    "    embedding_function=embeddings,\n",
     "    connection_args={\"uri\": URI},\n",
     ")"
    ]
@@ -100,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "id": "c6f4973d",
    "metadata": {},
    "outputs": [],
@@ -109,7 +112,7 @@
     "\n",
     "vector_store_saved = Milvus.from_documents(\n",
     "    [Document(page_content=\"foo!\")],\n",
-    "    embedding_function,\n",
+    "    embeddings,\n",
     "    collection_name=\"langchain_example\",\n",
     "    connection_args={\"uri\": URI},\n",
     ")"
@@ -125,13 +128,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "id": "12817d16",
    "metadata": {},
    "outputs": [],
    "source": [
     "vector_store_loaded = Milvus(\n",
-    "    embedding_function,\n",
+    "    embeddings,\n",
     "    connection_args={\"uri\": URI},\n",
     "    collection_name=\"langchain_example\",\n",
     ")"
@@ -144,45 +147,97 @@
    "source": [
     "## Manage vector store\n",
     "\n",
-    "### Add items to vector store"
+    "Once you have created your vector store, we can interact with it by adding and deleting different items.\n",
+    "\n",
+    "### Add items to vector store\n",
+    "\n",
+    "We can add items to our vector store by using the `add_documents` function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "id": "3ced24f6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['1', '2', '3']"
+       "['b0248595-2a41-4f6b-9c25-3a24c1278bb3',\n",
+       " 'fa642726-5329-4495-a072-187e948dd71f',\n",
+       " '9905001c-a4a3-455e-ab94-72d0ed11b476',\n",
+       " 'eacc7256-d7fa-4036-b1f7-83d7a4bee0c5',\n",
+       " '7508f7ff-c0c9-49ea-8189-634f8a0244d8',\n",
+       " '2e179609-3ff7-4c6a-9e05-08978903fe26',\n",
+       " 'fab1f2ac-43e1-45f9-b81b-fc5d334c6508',\n",
+       " '1206d237-ee3a-484f-baf2-b5ac38eeb314',\n",
+       " 'd43cbf9a-a772-4c40-993b-9439065fec01',\n",
+       " '25e667bb-6f09-4574-a368-661069301906']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from langchain_core.documents import Document\n",
+    "from uuid import uuid4\n",
+    "\n",
     "document_1 = Document(\n",
-    "    page_content=\"foo\",\n",
-    "    metadata={\"source\": \"https://example.com\"}\n",
+    "    page_content=\"I had chocalate chip pancakes and scrambled eggs for breakfast this morning.\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
     ")\n",
     "\n",
     "document_2 = Document(\n",
-    "    page_content=\"bar\",\n",
-    "    metadata={\"source\": \"https://example.com\"}\n",
+    "    page_content=\"The weather forecast for tomorrow is cloudy and overcast, with a high of 62 degrees.\",\n",
+    "    metadata={\"source\": \"news\"}\n",
     ")\n",
     "\n",
     "document_3 = Document(\n",
-    "    page_content=\"baz\",\n",
-    "    metadata={\"source\": \"https://example.com\"}\n",
+    "    page_content=\"Building an exciting new project with LangChain - come check it out!\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
     ")\n",
     "\n",
-    "documents = [document_1, document_2, document_3]\n",
+    "document_4 = Document(\n",
+    "    page_content=\"Robbers broke into the city bank and stole $1 million in cash.\",\n",
+    "    metadata={\"source\": \"news\"}\n",
+    ")\n",
     "\n",
-    "vector_store.add_documents(documents=documents,ids=[\"1\",\"2\",\"3\"])"
+    "document_5 = Document(\n",
+    "    page_content=\"Wow! That was an amazing movie. I can't wait to see it again.\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
+    ")\n",
+    "\n",
+    "document_6 = Document(\n",
+    "    page_content=\"Is the new iPhone worth the price? Read this review to find out.\",\n",
+    "    metadata={\"source\": \"website\"}\n",
+    ")\n",
+    "\n",
+    "document_7 = Document(\n",
+    "    page_content=\"The top 10 soccer players in the world right now.\",\n",
+    "    metadata={\"source\": \"website\"}\n",
+    ")\n",
+    "\n",
+    "document_8 = Document(\n",
+    "    page_content=\"LangGraph is the best framework for building stateful, agentic applications!\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
+    ")\n",
+    "\n",
+    "document_9 = Document(\n",
+    "    page_content=\"The stock market is down 500 points today due to fears of a recession.\",\n",
+    "    metadata={\"source\": \"news\"}\n",
+    ")\n",
+    "\n",
+    "document_10 = Document(\n",
+    "    page_content=\"I have a bad feeling I am going to get deleted :(\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
+    ")\n",
+    "\n",
+    "documents = [document_1, document_2, document_3, document_4, document_5, document_6, document_7, document_8, document_9, document_10]\n",
+    "uuids = [str(uuid4()) for _ in range(len(documents))]\n",
+    "\n",
+    "vector_store.add_documents(documents=documents,ids=uuids)"
    ]
   },
   {
@@ -195,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "id": "1f387fa8",
    "metadata": {},
    "outputs": [
@@ -205,13 +260,13 @@
        "(insert count: 0, delete count: 1, upsert count: 0, timestamp: 0, success count: 0, err count: 0, cost: 0)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vector_store.delete(ids=[\"3\"])"
+    "vector_store.delete(ids=[uuids[-1]])"
    ]
   },
   {
@@ -223,12 +278,16 @@
     "\n",
     "Once your vector store has been created and the relevant documents have been added you will most likely wish to query it during the running of your chain or agent. \n",
     "\n",
-    "### Query directly"
+    "### Query directly\n",
+    "\n",
+    "#### Similarity search\n",
+    "\n",
+    "Performing a simple similarity search with filtering on metadata can be done as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "id": "35801a55",
    "metadata": {},
    "outputs": [
@@ -236,14 +295,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* bar [{'pk': '2', 'source': 'https://example.com'}]\n"
+      "* Building an exciting new project with LangChain - come check it out! [{'pk': '9905001c-a4a3-455e-ab94-72d0ed11b476', 'source': 'tweet'}]\n",
+      "* LangGraph is the best framework for building stateful, agentic applications! [{'pk': '1206d237-ee3a-484f-baf2-b5ac38eeb314', 'source': 'tweet'}]\n"
      ]
     }
    ],
    "source": [
-    "results = vector_store.similarity_search(query=\"thud\",k=1,filter={\"source\":\"https://another-example.com\"})\n",
-    "for doc in results:\n",
-    "    print(f\"* {doc.page_content} [{doc.metadata}]\")"
+    "results = vector_store.similarity_search(\"LangChain provides abstractions to make working with LLMs easy\", k=2, filter={\"source\": \"tweet\"})\n",
+    "for res in results:\n",
+    "    print(f\"* {res.page_content} [{res.metadata}]\")"
    ]
   },
   {
@@ -251,7 +311,9 @@
    "id": "35574409",
    "metadata": {},
    "source": [
-    "If you want to execute a similarity search and receive the corresponding scores you can run:"
+    "#### Similarity search with score\n",
+    "\n",
+    "You can also search with score:"
    ]
   },
   {
@@ -269,9 +331,9 @@
     }
    ],
    "source": [
-    "results = vector_store.similarity_search_with_score(query=\"thud\",k=1,filter={\"source\":\"https://example.com\"})\n",
-    "for doc, score in results:\n",
-    "    print(f\"* [SIM={score:3f}] {doc.page_content} [{doc.metadata}]\")"
+    "results = vector_store.similarity_search_with_score(\"Will it be hot tomorrow?\", k=1, filter={\"source\": \"news\"})\n",
+    "for res, score in results:\n",
+    "    print(f\"* [SIM={score:3f}] {res.page_content} [{res.metadata}]\")"
    ]
   },
   {
@@ -288,17 +350,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "id": "f6d9357c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(metadata={'pk': '2', 'source': 'https://example.com'}, page_content='bar')]"
+       "[Document(metadata={'pk': 'eacc7256-d7fa-4036-b1f7-83d7a4bee0c5', 'source': 'news'}, page_content='Robbers broke into the city bank and stole $1 million in cash.')]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +370,7 @@
     "    search_type=\"mmr\",\n",
     "    search_kwargs={\"k\": 1}\n",
     ")\n",
-    "retriever.invoke(\"thud\")"
+    "retriever.invoke(\"Stealing from the bank is a crime\", filter={\"source\": \"news\"})"
    ]
   },
   {
@@ -316,38 +378,52 @@
    "id": "8ac953f1",
    "metadata": {},
    "source": [
-    "Using retriever in a simple RAG chain:\n",
+    "## Chain usage\n",
     "\n",
-    "### WARNING\n",
+    "The code below shows how to use the vector store as a retriever in a simple RAG chain:\n",
     "\n",
-    "To run this cell, you need to be able to use the `ChatOpenAI` chat model. Learn about how to set it up by visiting [this page](https://python.langchain.com/v0.2/docs/integrations/chat/openai/)."
+    "```{=mdx}\n",
+    "import ChatModelTabs from \"@theme/ChatModelTabs\";\n",
+    "\n",
+    "<ChatModelTabs customVarName=\"llm\" />\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
+   "id": "d17118c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | output: false\n",
+    "# | echo: false\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "7bbe3b95",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'I\\'m sorry, I don\\'t have enough context to answer the question about \"thud\" in relation to a bar.'"
+       "'LangGraph is used for building stateful, agentic applications. It provides a framework that facilitates the development of such applications effectively.'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain_openai import ChatOpenAI\n",
     "from langchain import hub\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.runnables import RunnablePassthrough\n",
-    "\n",
-    "\n",
-    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\")\n",
     "\n",
     "prompt = hub.pull(\"rlm/rag-prompt\")\n",
     "\n",
@@ -361,7 +437,7 @@
     "    | StrOutputParser()\n",
     ")\n",
     "\n",
-    "rag_chain.invoke(\"thud\")"
+    "rag_chain.invoke(\"What is LangGraph used for?\")"
    ]
   },
   {
