--- a/docs/docs/integrations/vectorstores/mongodb_atlas.ipynb
+++ b/docs/docs/integrations/vectorstores/mongodb_atlas.ipynb
@@ -30,21 +30,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "73cf7c9f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.1.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pip install -qU langchain-mongodb pymongo langchain-openai"
    ]
@@ -78,21 +67,59 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a53673ae",
+   "id": "1f23de23",
    "metadata": {},
    "source": [
-    "## Instantiation"
+    "If you want to get best in-class automated tracing of your model calls you can also set your [LangSmith](https://docs.smith.langchain.com/) API key by uncommenting below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
+   "id": "908e7772",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# os.environ[\"LANGSMITH_API_KEY\"] = getpass.getpass(\"Enter your LangSmith API key: \")\n",
+    "# os.environ[\"LANGSMITH_TRACING\"] = \"true\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a53673ae",
+   "metadata": {},
+   "source": [
+    "## Initialization\n",
+    "\n",
+    "```{=mdx}\n",
+    "import EmbeddingTabs from \"@theme/EmbeddingTabs\";\n",
+    "\n",
+    "<EmbeddingTabs/>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "f5fed614",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | output: false\n",
+    "# | echo: false\n",
+    "from langchain_openai import OpenAIEmbeddings\n",
+    "\n",
+    "embeddings = OpenAIEmbeddings(model=\"text-embedding-3-small\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "id": "00d78318",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pymongo import MongoClient\n",
-    "from langchain_openai import OpenAIEmbeddings\n",
     "from langchain_mongodb.vectorstores import MongoDBAtlasVectorSearch\n",
     "from pymongo import MongoClient\n",
     "\n",
@@ -104,11 +131,10 @@
     "ATLAS_VECTOR_SEARCH_INDEX_NAME = \"langchain-test-index-vectorstores\"\n",
     "\n",
     "MONGODB_COLLECTION = client[DB_NAME][COLLECTION_NAME]\n",
-    "embedding_function = OpenAIEmbeddings()\n",
     "\n",
     "vector_store = MongoDBAtlasVectorSearch(\n",
     "  collection=MONGODB_COLLECTION,\n",
-    "  embedding=embedding_function,\n",
+    "  embedding=embeddings,\n",
     "  index_name=ATLAS_VECTOR_SEARCH_INDEX_NAME,\n",
     "  relevance_score_fn=\"cosine\",\n",
     ")"
@@ -121,12 +147,16 @@
    "source": [
     "## Manage vector store\n",
     "\n",
-    "### Add items to vector store\n"
+    "Once you have created your vector store, we can interact with it by adding and deleting different items.\n",
+    "\n",
+    "### Add items to vector store\n",
+    "\n",
+    "We can add items to our vector store by using the `add_documents` function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 57,
    "id": "aac9563e",
    "metadata": {
     "tags": []
@@ -135,35 +165,81 @@
     {
      "data": {
       "text/plain": [
-       "['1', '2', '3']"
+       "['03ad81e8-32a0-46f0-b7d8-f5b977a6b52a',\n",
+       " '8396a68d-f4a3-4176-a581-a1a8c303eea4',\n",
+       " 'e7d95150-67f6-499f-b611-84367c50fa60',\n",
+       " '8c31b84e-2636-48b6-8b99-9fccb47f7051',\n",
+       " 'aa02e8a2-a811-446a-9785-8cea0faba7a9',\n",
+       " '19bd72ff-9766-4c3b-b1fd-195c732c562b',\n",
+       " '642d6f2f-3e34-4efa-a1ed-c4ba4ef0da8d',\n",
+       " '7614bb54-4eb5-4b3b-990c-00e35cb31f99',\n",
+       " '69e18c67-bf1b-43e5-8a6e-64fb3f240e52',\n",
+       " '30d599a7-4a1a-47a9-bbf8-6ed393e2e33c']"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from langchain_core.documents import Document\n",
+    "from uuid import uuid4\n",
     "\n",
     "document_1 = Document(\n",
-    "    page_content=\"foo\",\n",
-    "    metadata={\"source\": \"https://example.com\"}\n",
+    "    page_content=\"I had chocalate chip pancakes and scrambled eggs for breakfast this morning.\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
     ")\n",
     "\n",
     "document_2 = Document(\n",
-    "    page_content=\"bar\",\n",
-    "    metadata={\"source\": \"https://example.com\"}\n",
+    "    page_content=\"The weather forecast for tomorrow is cloudy and overcast, with a high of 62 degrees.\",\n",
+    "    metadata={\"source\": \"news\"}\n",
     ")\n",
     "\n",
     "document_3 = Document(\n",
-    "    page_content=\"baz\",\n",
-    "    metadata={\"source\": \"https://example.com\"}\n",
+    "    page_content=\"Building an exciting new project with LangChain - come check it out!\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
     ")\n",
     "\n",
-    "documents = [document_1, document_2, document_3]\n",
+    "document_4 = Document(\n",
+    "    page_content=\"Robbers broke into the city bank and stole $1 million in cash.\",\n",
+    "    metadata={\"source\": \"news\"}\n",
+    ")\n",
     "\n",
-    "vector_store.add_documents(documents=documents,ids=[\"1\",\"2\",\"3\"])"
+    "document_5 = Document(\n",
+    "    page_content=\"Wow! That was an amazing movie. I can't wait to see it again.\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
+    ")\n",
+    "\n",
+    "document_6 = Document(\n",
+    "    page_content=\"Is the new iPhone worth the price? Read this review to find out.\",\n",
+    "    metadata={\"source\": \"website\"}\n",
+    ")\n",
+    "\n",
+    "document_7 = Document(\n",
+    "    page_content=\"The top 10 soccer players in the world right now.\",\n",
+    "    metadata={\"source\": \"website\"}\n",
+    ")\n",
+    "\n",
+    "document_8 = Document(\n",
+    "    page_content=\"LangGraph is the best framework for building stateful, agentic applications!\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
+    ")\n",
+    "\n",
+    "document_9 = Document(\n",
+    "    page_content=\"The stock market is down 500 points today due to fears of a recession.\",\n",
+    "    metadata={\"source\": \"news\"}\n",
+    ")\n",
+    "\n",
+    "document_10 = Document(\n",
+    "    page_content=\"I have a bad feeling I am going to get deleted :(\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
+    ")\n",
+    "\n",
+    "documents = [document_1, document_2, document_3, document_4, document_5, document_6, document_7, document_8, document_9, document_10]\n",
+    "uuids = [str(uuid4()) for _ in range(len(documents))]\n",
+    "\n",
+    "vector_store.add_documents(documents=documents,ids=uuids)"
    ]
   },
   {
@@ -176,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "id": "bbb5fd5c",
    "metadata": {},
    "outputs": [
@@ -186,18 +262,18 @@
        "True"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vector_store.delete(ids=[\"3\"])"
+    "vector_store.delete(ids=[uuids[-1]])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8b46055f",
+   "id": "d6111eb6",
    "metadata": {},
    "source": [
     "## Query vector store\n",
@@ -206,32 +282,65 @@
     "\n",
     "### Query directly\n",
     "\n",
+    "#### Similarity search\n",
+    "\n",
     "Performing a simple similarity search can be done as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "d04d9153",
+   "execution_count": 62,
+   "id": "19b60ac0",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* foo [{'_id': '1', 'source': 'https://example.com'}]\n"
+      "* Building an exciting new project with LangChain - come check it out! [{'_id': 'e7d95150-67f6-499f-b611-84367c50fa60', 'source': 'tweet'}]\n",
+      "* LangGraph is the best framework for building stateful, agentic applications! [{'_id': '7614bb54-4eb5-4b3b-990c-00e35cb31f99', 'source': 'tweet'}]\n"
      ]
     }
    ],
    "source": [
-    "results = vector_store.similarity_search(query=\"foo\",k=1)\n",
-    "for doc in results:\n",
-    "    print(f\"* {doc.page_content} [{doc.metadata}]\")"
+    "results = vector_store.similarity_search(\"LangChain provides abstractions to make working with LLMs easy\", k=2)\n",
+    "for res in results:\n",
+    "    print(f\"* {res.page_content} [{res.metadata}]\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "02aef29c-5da0-41b8-b4fc-98fd71b94abf",
+   "id": "6c624606",
+   "metadata": {},
+   "source": [
+    "#### Similarity search with score\n",
+    "\n",
+    "You can also search with score:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "e919fa51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* [SIM=0.784560] The weather forecast for tomorrow is cloudy and overcast, with a high of 62 degrees. [{'_id': '8396a68d-f4a3-4176-a581-a1a8c303eea4', 'source': 'news'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = vector_store.similarity_search_with_score(\"Will it be hot tomorrow?\", k=1)\n",
+    "for res, score in results:\n",
+    "    print(f\"* [SIM={score:3f}] {res.page_content} [{res.metadata}]\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "513a1416",
    "metadata": {},
    "source": [
     "### Pre-filtering with Similarity Search"
@@ -239,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3b2d36d-d47a-482f-999d-85c23eb67eed",
+   "id": "ac58c6c7",
    "metadata": {},
    "source": [
     "Atlas Vector Search supports pre-filtering using MQL Operators for filtering.  Below is an example index and query on the same data loaded above that allows you do metadata filtering on the \"page\" field.  You can update your existing index with the filter defined and do pre-filtering with vector search."
@@ -247,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b385a46-1e54-471f-95b2-202813d90bb2",
+   "id": "dacac7b8",
    "metadata": {},
    "source": [
     "```json\n",
@@ -284,6 +393,120 @@
     "for doc in results:\n",
     "    print(f\"* {doc.page_content} [{doc.metadata}]\")\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32b13a9b",
+   "metadata": {},
+   "source": [
+    "#### Other search methods\n",
+    "\n",
+    "There are a variety of other search methods that are not covered in this notebook, such as MMR search or searching by vector. For a full list of the search abilities available for `AstraDBVectorStore` check out the [API reference](https://api.python.langchain.com/en/latest/vectorstores/langchain_astradb.vectorstores.AstraDBVectorStore.html)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01316a42",
+   "metadata": {},
+   "source": [
+    "### Query by turning into retriever\n",
+    "\n",
+    "You can also transform the vector store into a retriever for easier usage in your chains. \n",
+    "\n",
+    "Here is how to transform your vector store into a retriever and then invoke the retreiever with a simple query and filter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "8f246301",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Document(metadata={'_id': '8c31b84e-2636-48b6-8b99-9fccb47f7051', 'source': 'news'}, page_content='Robbers broke into the city bank and stole $1 million in cash.')]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "retriever = vector_store.as_retriever(\n",
+    "    search_type=\"similarity_score_threshold\",\n",
+    "    search_kwargs={\"k\": 1, \"score_threshold\": 0.2},\n",
+    ")\n",
+    "retriever.invoke(\"Stealing from the bank is a crime\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72312657",
+   "metadata": {},
+   "source": [
+    "## Chain usage\n",
+    "\n",
+    "The code below shows how to use the vector store as a retriever in a simple RAG chain:\n",
+    "\n",
+    "```{=mdx}\n",
+    "import ChatModelTabs from \"@theme/ChatModelTabs\";\n",
+    "\n",
+    "<ChatModelTabs customVarName=\"llm\" />\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "a42da723",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | output: false\n",
+    "# | echo: false\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "80c1130f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'LangGraph is used for building stateful, agentic applications. It provides a framework that facilitates the development of such applications.'"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain import hub\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "\n",
+    "prompt = hub.pull(\"rlm/rag-prompt\")\n",
+    "\n",
+    "def format_docs(docs):\n",
+    "    return \"\\n\\n\".join(doc.page_content for doc in docs)\n",
+    "\n",
+    "rag_chain = (\n",
+    "    {\"context\": retriever | format_docs, \"question\": RunnablePassthrough()}\n",
+    "    | prompt\n",
+    "    | llm\n",
+    "    | StrOutputParser()\n",
+    ")\n",
+    "\n",
+    "rag_chain.invoke(\"What is LangGraph used for?\")"
    ]
   },
   {
