--- a/docs/docs/integrations/vectorstores/pinecone.ipynb
+++ b/docs/docs/integrations/vectorstores/pinecone.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "eb554814",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "23b5ac5e",
    "metadata": {},
    "outputs": [],
@@ -92,28 +92,28 @@
    "id": "658706a3",
    "metadata": {},
    "source": [
-    "## Instantiation\n",
+    "## Initialization\n",
     "\n",
     "Before initializing our vector store, let's connect to a Pinecone index. If one named `index_name` doesn't exist, it will be created."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "276a06dd",
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
     "\n",
-    "index_name = \"langchain-index\"  # change if desired\n",
+    "index_name = \"langchain-test-index\"  # change if desired\n",
     "\n",
     "existing_indexes = [index_info[\"name\"] for index_info in pc.list_indexes()]\n",
     "\n",
     "if index_name not in existing_indexes:\n",
     "    pc.create_index(\n",
     "        name=index_name,\n",
-    "        dimension=4096,\n",
+    "        dimension=3072,\n",
     "        metric=\"cosine\",\n",
     "        spec=ServerlessSpec(cloud=\"aws\", region=\"us-east-1\"),\n",
     "    )\n",
@@ -128,22 +128,39 @@
    "id": "3a4d377f",
    "metadata": {},
    "source": [
-    "Now that our Pinecone index is setup, we can initialize our vector store. We are using the `langchain-ollama` embeddings since it does not require payment or an API key. For information on `OllamaEmbeddings` read [this page](https://python.langchain.com/v0.2/docs/integrations/text_embedding/ollama/)."
+    "Now that our Pinecone index is setup, we can initialize our vector store. \n",
+    "\n",
+    "```{=mdx}\n",
+    "import EmbeddingTabs from \"@theme/EmbeddingTabs\";\n",
+    "\n",
+    "<EmbeddingTabs/>\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
+   "id": "1485db56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | output: false\n",
+    "# | echo: false\n",
+    "from langchain_openai import OpenAIEmbeddings\n",
+    "\n",
+    "embeddings = OpenAIEmbeddings(model=\"text-embedding-3-large\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "6e104aee",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_pinecone import PineconeVectorStore\n",
-    "from langchain_ollama import OllamaEmbeddings\n",
     "\n",
-    "embedding_function= OllamaEmbeddings(model=\"llama3\")\n",
-    "\n",
-    "vector_store = PineconeVectorStore(index=index, embedding=embedding_function)"
+    "vector_store = PineconeVectorStore(index=index, embedding=embeddings)"
    ]
   },
   {
@@ -153,47 +170,97 @@
    "source": [
     "## Manage vector store\n",
     "\n",
-    "### Add items to vector store\n"
+    "Once you have created your vector store, we can interact with it by adding and deleting different items.\n",
+    "\n",
+    "### Add items to vector store\n",
+    "\n",
+    "We can add items to our vector store by using the `add_documents` function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "70e688f4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['1', '2', '3']"
+       "['167b8681-5974-467f-adcb-6e987a18df01',\n",
+       " 'd16010fd-41f8-4d49-9c22-c66d5555a3fe',\n",
+       " 'ffcacfb3-2bc2-44c3-a039-c2256a905c0e',\n",
+       " 'cf3bfc9f-5dc7-4f5e-bb41-edb957394126',\n",
+       " 'e99b07eb-fdff-4cb9-baa8-619fd8efeed3',\n",
+       " '68c93033-a24f-40bd-8492-92fa26b631a4',\n",
+       " 'b27a4ecb-b505-4c5d-89ff-526e3d103558',\n",
+       " '4868a9e6-e6fb-4079-b400-4a1dfbf0d4c4',\n",
+       " '921c0e9c-0550-4eb5-9a6c-ed44410788b2',\n",
+       " 'c446fc23-64e8-47e7-8c19-ecf985e9411e']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from langchain_core.documents import Document\n",
+    "from uuid import uuid4\n",
     "\n",
     "document_1 = Document(\n",
-    "    page_content=\"foo\",\n",
-    "    metadata={\"source\": \"https://example.com\"}\n",
+    "    page_content=\"I had chocalate chip pancakes and scrambled eggs for breakfast this morning.\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
     ")\n",
     "\n",
     "document_2 = Document(\n",
-    "    page_content=\"bar\",\n",
-    "    metadata={\"source\": \"https://another-example.com\"}\n",
+    "    page_content=\"The weather forecast for tomorrow is cloudy and overcast, with a high of 62 degrees.\",\n",
+    "    metadata={\"source\": \"news\"}\n",
     ")\n",
     "\n",
     "document_3 = Document(\n",
-    "    page_content=\"baz\",\n",
-    "    metadata={\"source\": \"https://example.com\"}\n",
+    "    page_content=\"Building an exciting new project with LangChain - come check it out!\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
     ")\n",
     "\n",
-    "documents = [document_1, document_2, document_3]\n",
+    "document_4 = Document(\n",
+    "    page_content=\"Robbers broke into the city bank and stole $1 million in cash.\",\n",
+    "    metadata={\"source\": \"news\"}\n",
+    ")\n",
     "\n",
-    "vector_store.add_documents(documents=documents,ids=[\"1\",\"2\",\"3\"])"
+    "document_5 = Document(\n",
+    "    page_content=\"Wow! That was an amazing movie. I can't wait to see it again.\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
+    ")\n",
+    "\n",
+    "document_6 = Document(\n",
+    "    page_content=\"Is the new iPhone worth the price? Read this review to find out.\",\n",
+    "    metadata={\"source\": \"website\"}\n",
+    ")\n",
+    "\n",
+    "document_7 = Document(\n",
+    "    page_content=\"The top 10 soccer players in the world right now.\",\n",
+    "    metadata={\"source\": \"website\"}\n",
+    ")\n",
+    "\n",
+    "document_8 = Document(\n",
+    "    page_content=\"LangGraph is the best framework for building stateful, agentic applications!\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
+    ")\n",
+    "\n",
+    "document_9 = Document(\n",
+    "    page_content=\"The stock market is down 500 points today due to fears of a recession.\",\n",
+    "    metadata={\"source\": \"news\"}\n",
+    ")\n",
+    "\n",
+    "document_10 = Document(\n",
+    "    page_content=\"I have a bad feeling I am going to get deleted :(\",\n",
+    "    metadata={\"source\": \"tweet\"}\n",
+    ")\n",
+    "\n",
+    "documents = [document_1, document_2, document_3, document_4, document_5, document_6, document_7, document_8, document_9, document_10]\n",
+    "uuids = [str(uuid4()) for _ in range(len(documents))]\n",
+    "\n",
+    "vector_store.add_documents(documents=documents,ids=uuids)"
    ]
   },
   {
@@ -206,12 +273,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "5b8437cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vector_store.delete(ids=[\"3\"])"
+    "vector_store.delete(ids=[uuids[-1]])"
    ]
   },
   {
@@ -230,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "ffbcb3fb",
    "metadata": {},
    "outputs": [
@@ -238,14 +305,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* bar [{'source': 'https://another-example.com'}]\n"
+      "* Building an exciting new project with LangChain - come check it out! [{'source': 'tweet'}]\n",
+      "* LangGraph is the best framework for building stateful, agentic applications! [{'source': 'tweet'}]\n"
      ]
     }
    ],
    "source": [
-    "results = vector_store.similarity_search(query=\"thud\",k=1,filter={\"source\":\"https://another-example.com\"})\n",
-    "for doc in results:\n",
-    "    print(f\"* {doc.page_content} [{doc.metadata}]\")"
+    "results = vector_store.similarity_search(\"LangChain provides abstractions to make working with LLMs easy\", k=2, filter={\"source\": \"tweet\"})\n",
+    "for res in results:\n",
+    "    print(f\"* {res.page_content} [{res.metadata}]\")"
    ]
   },
   {
@@ -253,12 +321,14 @@
    "id": "79f3494d",
    "metadata": {},
    "source": [
-    "If you want to execute a similarity search and receive the corresponding scores you can run:"
+    "#### Similarity search with score\n",
+    "\n",
+    "You can also search with score:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "5fb24583",
    "metadata": {},
    "outputs": [
@@ -266,14 +336,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* [SIM=0.425751] foo [{'source': 'https://example.com'}]\n"
+      "* [SIM=0.553187] The weather forecast for tomorrow is cloudy and overcast, with a high of 62 degrees. [{'source': 'news'}]\n"
      ]
     }
    ],
    "source": [
-    "results = vector_store.similarity_search_with_score(query=\"thud\",k=1,filter={\"source\":\"https://example.com\"})\n",
-    "for doc, score in results:\n",
-    "    print(f\"* [SIM={score:3f}] {doc.page_content} [{doc.metadata}]\")"
+    "results = vector_store.similarity_search_with_score(\"Will it be hot tomorrow?\", k=1, filter={\"source\": \"news\"})\n",
+    "for res, score in results:\n",
+    "    print(f\"* [SIM={score:3f}] {res.page_content} [{res.metadata}]\")"
    ]
   },
   {
@@ -281,6 +351,8 @@
    "id": "1855941b",
    "metadata": {},
    "source": [
+    "#### Other search methods\n",
+    "\n",
     "There are more search methods (such as MMR) not listed in this notebook, to find all of them be sure to read the [API reference](https://api.python.langchain.com/en/latest/vectorstores/langchain_pinecone.vectorstores.PineconeVectorStore.html).\n",
     "\n",
     "### Query by turning into retriever\n",
@@ -290,66 +362,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "78140e87",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(metadata={'source': 'https://another-example.com'}, page_content='bar')]"
+       "[Document(metadata={'source': 'news'}, page_content='Robbers broke into the city bank and stole $1 million in cash.')]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "retriever = vector_store.as_retriever(\n",
-    "    search_type=\"mmr\",\n",
-    "    search_kwargs={\"k\": 1}\n",
+    "    search_type=\"similarity_score_threshold\",\n",
+    "    search_kwargs={\"k\": 1, \"score_threshold\": 0.5},\n",
     ")\n",
-    "retriever.invoke(\"thud\")"
+    "retriever.invoke(\"Stealing from the bank is a crime\", filter={\"source\": \"news\"})"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "06c6cbf1",
+   "id": "72990cb5",
    "metadata": {},
    "source": [
-    "Using retriever in a simple RAG chain:\n",
+    "## Chain usage\n",
     "\n",
-    "### WARNING\n",
+    "The code below shows how to use the vector store as a retriever in a simple RAG chain:\n",
     "\n",
-    "To run this cell, you need to be able to use the `ChatOpenAI` chat model. Learn about how to set it up by visiting [this page](https://python.langchain.com/v0.2/docs/integrations/chat/openai/)."
+    "```{=mdx}\n",
+    "import ChatModelTabs from \"@theme/ChatModelTabs\";\n",
+    "\n",
+    "<ChatModelTabs customVarName=\"llm\" />\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "e587f853",
+   "execution_count": 20,
+   "id": "f12560cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | output: false\n",
+    "# | echo: false\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "262651fc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"I'm sorry, I don't have enough information to answer that question.\""
+       "'LangGraph is used for building stateful, agentic applications. It provides a framework that facilitates the development of these types of applications.'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain_openai import ChatOpenAI\n",
     "from langchain import hub\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.runnables import RunnablePassthrough\n",
-    "\n",
-    "\n",
-    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\")\n",
     "\n",
     "prompt = hub.pull(\"rlm/rag-prompt\")\n",
     "\n",
@@ -363,7 +449,7 @@
     "    | StrOutputParser()\n",
     ")\n",
     "\n",
-    "rag_chain.invoke(\"thud\")"
+    "rag_chain.invoke(\"What is LangGraph used for?\")"
    ]
   },
   {
